--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,1 +1,13 @@
-<h1>This is the Model's index page.</h1>
+<h1>BeerTrax</h1>
+
+<% @beers.reverse.each do |beer| %>
+    <h2><%= beer.name %></h2>
+    <em><%= beer.brewery.name %></em>
+    <p><%= beer.comments %></p>
+    <br>
+<% end %>
+<br>
+
+<% if logged_in? %>
+    <a href="/logout"><button>Logout</button></a>
+<% end %>
