--- a/app/views/beers/new.html.erb
+++ b/app/views/beers/new.html.erb
@@ -1,1 +1,24 @@
-<h1>Insert the form to create a new instance of your model.</h1>
+<h1>Add a Beer to Your List</h1>
+<form action="/beers" method="POST">
+    <label>Beer:</label><br>
+    <label for="beer_name">Name</label>
+    <input type="text" name="beer_name" id="beer_name"><br>
+    <label for="ratebeer_url">Ratebeer URL</label>
+    <input type="text" name="ratebeer_url" id="ratebeer_url"><br>
+    <label for="style">Style</label>
+    <input type="text" name="style" id="style"><br>
+    <label for="rating">Rating</label>
+    <input type="text" name="rating" id="rating"><br>
+    <label for="comments">Comments</label>
+    <input type="text" name="comments" id="comments"><br><br>
+
+    <label>Brewery:</label><br>
+    <label for="brewery_name">Brewery Name</label>
+    <input type="text" name="brewery_name" id="brewery_name"><br>
+    <label for="city">City</label>
+    <input type="text" name="city" id="city"><br>
+    <label for="state">State</label>
+    <input type="text" name="state" id="state"><br>
+    <br>
+    <input type="submit" value="Submit">
+</form>
