--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,8 +1,17 @@
 <h1>BeerTrax</h1>
 <br>
-<% @beers.each do |beer| %>
+<% if !logged_in? %>
+    <a href="/signup"><button>Sign Up</button></a>
+    <a href="/login"><button>Login</button></a>
+<% end %>
+<% @beers.reverse.each do |beer| %>
     <h2><%= beer.name %></h2>
     <em><%= beer.brewery.name %></em>
     <p><%= beer.comments %></p>
     <br>
+<% end %>
+<br>
+
+<% if logged_in? %>
+    <a href="/logout"><button>Logout</button></a>
 <% end %>
