--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,7 +7,7 @@
   <% end %>  
 <% end %>
 
-<form action="/users" method="POST">
+<form action="/signup" method="POST">
 <label for="username">Username: </label>
 <input type="text" name="username" id="username">
 <br>
