--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,9 +11,39 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
   <link rel="stylesheet" href="/stylesheets/main.css" />
 </head>
 <body>
+  <header>
+    <nav class="navbar navbar-default">
+      <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">BeerTrax</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">           
+          <ul class="nav navbar-nav navbar-right">
+            <% if !logged_in? %>
+              <li class="nav-highlight"><a href="/signup">Sign Up</a></li>
+              <li><a href="/login">Log In</a></li>
+            <% else %>
+              <li class="nav-highlight"><a href="/beers/new">Add a Beer</a></li>
+              <li><a href="/logout">Log Out</a></li>
+            <% end %>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+  </header>
   <div class="wrapper">
 
       <%= yield %>
