--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -4,11 +4,13 @@
 <% end %>
 <br>
 <form action="/login" method="POST">
-    <label for="username">Username</label>
-    <input type="text" name="username" id="username">
-    <br>
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password">
-    <br>
-    <input type="submit" value="Login">
+    <div class="form-group">
+        <label for="username">Username</label>
+        <input class="form-control" type="text" name="username" id="username">
+        <br>
+        <label for="password">Password</label>
+        <input class="form-control" type="password" name="password" id="password">
+        <br>
+        <input class="btn btn-primary" type="submit" value="Login">
+    </div>
 </form>
