--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,15 +8,17 @@
 <% end %>
 
 <form action="/signup" method="POST">
-<label for="username">Username: </label>
-<input type="text" name="username" id="username">
-<br>
-<label for="email">Email Address: </label>
-<input type="text" name="email" id="email">
-<br>
-<label for="password">Password: </label>
-<input type="password" name="password" id="password">
-<br><br>
-
-<input type="submit" value="Sign up">
+    <div class="form-group">
+        <label for="username">Username: </label>
+        <input class="form-control" type="text" name="username" id="username">
+        <br>
+        <label for="email">Email Address: </label>
+        <input class="form-control" type="text" name="email" id="email">
+        <br>
+        <label for="password">Password: </label>
+        <input class="form-control" type="password" name="password" id="password">
+    </div>
+    <div class="form-group">
+        <input class="btn btn-primary" type="submit" value="Sign up">
+    </div>
 </form>
