--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -30,23 +30,6 @@
     width: 85%;
   }
 
-  h1 {
-    font-size: 36px;
-    line-height: 54px;
-  }
-
-  h2 {
-    border-bottom: 2px solid #ccc;
-    font-size: 24px;
-    line-height: 36px;
-    margin-bottom: 16px;
-  }
-
-  h3 {
-    font-size: 18px;
-    line-height: 36px;
-  }
-
   p {
     margin-bottom: 18px;
   }
@@ -81,6 +64,15 @@
     margin-top: 20px;
     padding-top: 20px;
   }
+
+  li.nav-highlight {
+    background: red;
+  }
+
+  li.nav-highlight a, li.nav-highlight a:visited, li.nav-highlight a:active, li.nav-highlight a:link {
+    color: #fff;
+  }
+
 }
 
 @media only screen and (max-width: 600px) {
@@ -101,15 +93,5 @@
     border: none;
     border-top: 2px solid #ccc;
     padding: 0;
-  }
-
-  h1 {
-    font-size: 24px;
-    line-height: 36px;
-  }
-
-  h2 {
-    font-size: 18px;
-    line-height: 24px;
   }
 }
