--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -26,7 +26,7 @@
     box-shadow: 0 0 10px rgba(0,0,0,.3);
     margin: 16px auto;
     max-width: 1100px;
-    padding: 2.25%; /* 18px / 800px */
+    padding: 25px; /* 18px / 800px */
     width: 85%;
   }
 
@@ -71,6 +71,44 @@
 
   li.nav-highlight a, li.nav-highlight a:visited, li.nav-highlight a:active, li.nav-highlight a:link {
     color: #fff;
+  }
+
+  h2#beer_name {
+    display: inline;
+    border-right: 1px solid #000;
+    padding-right: 10px;
+  }
+
+  h2#brewery_name {
+    display: inline;
+    padding-left: 10px;
+  }
+
+  h4#beer-info {
+    margin: 20px 0;
+    font-weight: bold;
+  }
+
+  h4.section {
+    margin-bottom: 2px;
+    font-weight: bold;
+  }
+
+  #edit-delete-btns {
+    display: inline-block;
+    margin-left: 20px;
+  }
+
+  #delete-btn {
+    display: inline;
+  }
+
+  h2#beer_name_index {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  h2 {
+    margin-top: 0;
   }
 
 }
