--- a/app/views/beers/edit.html.erb
+++ b/app/views/beers/edit.html.erb
@@ -1,11 +1,11 @@
-<h1><%= @beer.name %></h1>
+<h2><%= @beer.name %></h2>
 
 <form action="/beers/<%=@beer.id%>" method="POST">
     <div class="form-group">
         <input type="hidden" id="hidden" name="_method" value="patch">
-        <h2>Beer:</h2>
+        <h3>Beer:</h3>
         <label for="beer_name">Name</label>
-        <input class="form-control" type="text" name="beer[name]" id="beer_name" value="<%=@beer.name%>">
+        <input class="form-control" type="text" name="beer[name]" id="beer_name" value="<%=@beer.name%>" required>
         <label for="ratebeer_url">Ratebeer URL</label>
         <input class="form-control" type="text" name="beer[ratebeer_url]" id="ratebeer_url" value="<%=@beer.ratebeer_url%>">
         <label for="style">Style</label>
@@ -17,9 +17,9 @@
     </div>
 
     <div class="form-group">
-        <h2>Brewery:</h2>
+        <h3>Brewery:</h3>
         <label for="brewery_name">Brewery Name</label>
-        <input class="form-control" type="text" name="brewery_name" id="brewery_name" value="<%=@beer.brewery.name%>">
+        <input class="form-control" type="text" name="brewery_name" id="brewery_name" value="<%=@beer.brewery.name%>" required>
         <label for="city">City</label>
         <input class="form-control" type="text" name="city" id="city" value="<%=@beer.brewery.city%>">
         <label for="state">State</label>
