--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -6,10 +6,10 @@
 <form action="/login" method="POST">
     <div class="form-group">
         <label for="username">Username</label>
-        <input class="form-control" type="text" name="username" id="username">
+        <input class="form-control" type="text" name="username" id="username" required>
         <br>
         <label for="password">Password</label>
-        <input class="form-control" type="password" name="password" id="password">
+        <input class="form-control" type="password" name="password" id="password" required>
         <br>
         <input class="btn btn-primary" type="submit" value="Login">
     </div>
